--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "next": "10.0.7",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -27,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "redux-logger": "^3.0.6"
   }
 }
